--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
+p {
+  max-width: 100%;
+}
+div {
+  max-width: 100%;
+  max-height: auto;
+  margin: auto;
+  margin-bottom: 160px;
+  background-repeat: no-repeat;
+}
 .banner {
-    margin: auto;
   width: 1320px;
   height: 600px;
   flex-shrink: 0;
   border-radius: 16px;
-  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%), url(source/Banner\ Image.png);
- 
-  
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
+    url(source/Banner\ Image.png);
+  background-size: 100% 100%;
 }
 #HNY {
   padding-top: 12%;
@@ -19,13 +28,149 @@
   line-height: normal;
 }
 #NYP {
- margin: auto;
+  margin: auto;
   width: 632px;
   color: #fff;
   text-align: center;
   font-family: Merriweather;
   font-size: 72px;
   font-style: normal;
+  font-weight: 1000;
+  line-height: 95px;
+}
+.deal {
+  text-align: center;
+}
+#OFF {
+  color: #f00;
+  font-family: Inter;
+  font-size: 88px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 48px;
+}
+#ohd {
+  color: #f00;
+  font-size: 24px;
+  font-family: Inter;
+  margin: 0px;
+}
+#AC {
+  color: #070211;
+  font-size: 48px;
+  font-weight: 500;
+  font-family: Inter;
+  margin: 0px;
+}
+#img2 {
+  width: 802.9px;
+  height: 500px;
+  flex-shrink: 0;
+  max-width: 100%;
+  max-height: auto;
+  margin: auto;
+}
+.third {
+  margin: auto;
+  width: 1320px;
+  height: 600px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
+    url(source/Vectorrr.png);
+ 
+  background-size: 100% 100%;
+}
+#wmp {
+  max-width: 642px;
+  margin: auto;
+  margin-left: 126px;
+  padding-top: 126px;
+  color: #fff;
+  font-family: Merriweather;
+  font-size: 64px;
+  font-style: normal;
   font-weight: 900;
-  line-height: 95px; /* 131.944% */
+  line-height: 88px; /* 137.5% */
+  letter-spacing: 7.04px;
+}
+#sp {
+  margin: auto;
+  margin-left: 126px;
+  max-width: 697px;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 30px;
+}
+#jn {
+  padding-top: 48px;
+  margin: auto;
+  margin-left: 158px;
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 0px;
+}
+
+.fourth{
+margin-top: 120px;
+width: 1320px;
+height: 482px;
+flex-shrink: 0;
+border-radius: 16px;
+background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+
+}
+#blk{
+    margin: auto;
+padding-top: 100px;
+width: auto;
+height: auto;
+text-align: center;
+color: #070211;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px;
+text-transform: capitalize;
+}
+#red{
+color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px; /* 175% */
+text-transform: capitalize;
+}
+#bt2{
+
+margin-top: 48px;
+color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+border: 0px;
+display: inline-flex;
+padding: 16px 32px;
+justify-content: center;
+align-items: center;
+border-radius: 8px;
+background: #F00;
 }
