--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-p {
-  max-width: 100%;
-}
+
 div {
   max-width: 100%;
   max-height: auto;
@@ -9,8 +7,8 @@ div {
   background-repeat: no-repeat;
 }
 .banner {
-  width: 1320px;
-  height: 600px;
+  max-width: 1320px;
+  min-height: 600px;
   flex-shrink: 0;
   border-radius: 16px;
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
@@ -29,7 +27,7 @@ div {
 }
 #NYP {
   margin: auto;
-  width: 632px;
+  max-width: 632px;
   color: #fff;
   text-align: center;
   font-family: Merriweather;
@@ -74,13 +72,12 @@ div {
 }
 .third {
   margin: auto;
-  width: 1320px;
-  height: 600px;
+  max-width: 1320px;
+  min-height: 600px;
   flex-shrink: 0;
   border-radius: 16px;
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
     url(source/Vectorrr.png);
-
   background-size: 100% 100%;
 }
 #wmp {
