--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 div {
   max-width: 100%;
   max-height: auto;
@@ -12,7 +11,7 @@ div {
   flex-shrink: 0;
   border-radius: 16px;
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
-    url(source/Banner\ Image.png);
+    url(./source/Banner\ Image.png);
   background-size: 100% 100%;
 }
 #HNY {
@@ -77,8 +76,21 @@ div {
   flex-shrink: 0;
   border-radius: 16px;
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
-    url(source/Vectorrr.png);
+    url(./source/Vectorrr.png);
   background-size: 100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#img3 {
+  padding-top: 70px;
+  padding-right: 138px;
+  align-items: center;
+  max-width: 319.83px;
+  height: 464.662px;
+  margin: auto;
+  flex-direction: column;
+  flex-shrink: 0;
 }
 #wmp {
   max-width: 642px;
@@ -117,6 +129,7 @@ div {
   text-transform: uppercase;
   background-color: transparent;
   border: 0px;
+  cursor: pointer;
 }
 
 .fourth {
@@ -172,5 +185,100 @@ div {
   align-items: center;
   border-radius: 8px;
   background: #f00;
+  cursor: pointer;
 }
-
+.NBD {
+  max-width: 1320px;
+  height: 482px;
+  flex-shrink: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  background-size: 100% 100%;
+}
+#div1 {
+  max-height: 482px;
+  background-size: 100% 100%;
+}
+#NBO {
+  margin: auto;
+  padding-top: 104px;
+  color: #f00;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  line-height: normal;
+}
+#CS {
+  margin-top: 10px;
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+}
+#SP2 {
+  margin-top: 10px;
+  max-width: 393px;
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 32px;
+}
+#div2 {
+  padding: auto;
+  width: 482px;
+  height: 482px;
+  flex-shrink: 100%;
+  border-radius: 50%;
+  border: 15px solid #f00;
+  justify-content: center;
+}
+#img4 {
+  padding: 40px;
+  border-radius: 400px;
+  justify-content: center;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  flex-shrink: 100%;
+}
+#div3 {
+  padding-top: 112px;
+  margin: auto;
+  max-height: 482px;
+}
+#year {
+  padding-top: 0;
+  color: #f00;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+#sp3 {
+  margin-top: 10px;
+  max-width: 276px;
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 32px;
+}
+#img5 {
+  padding: 0%;
+  max-width: 140px;
+  max-height: 140px;
+  flex-shrink: 100%;
+}
+footer {
+  background: #070211;
+  margin: 50% 0% 0% 0%;
+  padding: 0% 100% 0% 100%;
+  max-height: 600px;
+}
